--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
 argon2-cffi==23.1.0
@@ -20,6 +21,7 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+dnspython==2.7.0
 executing==2.2.0
 fastapi==0.115.14
 fastjsonschema==2.21.1
@@ -29,6 +31,8 @@ fqdn==1.5.1
 fsspec==2024.6.1
 gitdb==4.0.12
 GitPython==3.1.44
+graphql-core==3.2.6
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -88,9 +92,11 @@ pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.1
+pymongo==4.13.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
@@ -108,8 +114,10 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
+SQLAlchemy==2.0.41
 stack-data==0.6.3
 starlette==0.46.2
+strawberry-graphql==0.275.5
 sympy==1.13.3
 terminado==0.18.1
 threadpoolctl==3.6.0
